comments added/ js function fixed

--- a/web/src/main/webapp/resources/css/Style-menu.css
+++ b/web/src/main/webapp/resources/css/Style-menu.css
@@ -87,3 +87,27 @@ ul.menu > li:hover > ul > li > a:hover {
 #menu4 {
     float: right;
 }
+
+#menu5 {
+    float: right;
+}
+
+#menu6 {
+    float: right;
+}
+
+#menu7 {
+    float: right;
+}
+
+#menu8 {
+    float: right;
+}
+
+#menu9 {
+    float: right;
+}
+
+#menu10 {
+    float: right;
+}
